--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -44,7 +44,7 @@
                 <label class="form-label" for="description">Description Url</label>
                 <textarea class="form-control" type="text" id="description" name="campground[description]" required> <%= campground.description%> </textarea>
                 <div class="valid-feedback">
-                    Looks good!
+                    Looks good!!
                 </div>
             </div>
             <div class="mb-3">
