--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -21,7 +21,7 @@
                 <label class="form-label" for="image">Image Url</label>
                 <input class="form-control" type="text" id="image" name="campground[image]" required>
                 <div class="valid-feedback">
-                    Looks good!
+                    Looks good!!
                 </div>
             </div>
             <div class="mb-3">
@@ -39,11 +39,11 @@
                 <label class="form-label" for="description">Description Url</label>
                 <textarea class="form-control" type="text" id="description" name="campground[description]"> </textarea>
                 <div class="valid-feedback">
-                    Looks good!
+                    Looks good!!
                 </div>
             </div>
             <div class="mb-3">
-                <button class="btn btn-success">Add Campground</button>
+                <button class="btn btn-success">Add Campground </button>
             </div>
         </form>
     </div>
