--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -21,10 +21,7 @@
                     Looks good!
                 </div>
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="image">Add Images</label>
-                <input type="file" name="image" id="image" multiple>
-            </div>
+            
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
@@ -38,12 +35,28 @@
             </div>
             
             <div class="mb-3">
-                <label class="form-label" for="description">Description Url</label>
+                <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" type="text" id="description" name="campground[description]" required> <%= campground.description%> </textarea>
                 <div class="valid-feedback">
                     Looks good!!
                 </div>
             </div>
+
+            <div class="mb-3 custom-file">
+                <label for="image" class="form-label">Add more images</label>
+                <input class="form-control custom-file-input" id="image" type="file" name="image" multiple>
+            </div>
+
+            <div class="mb-3">
+                <% campground.images.forEach(function (img, i) { %>
+                    <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
+                    <div class="form-check-inline">
+                        <input type="checkbox" id="image-<%= i %>" name="deleteImages[]" value="<%= img.filename%>" >
+                    </div>
+                    <label for="image-<%= i %>">Delete?</label>
+                <% }) %> 
+            </div>
+
             <div class="mb-3">
                 <button class="btn btn-info">Update Campground</button>
             </div>
