--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,7 +5,12 @@
     <div class="card" mb-3>
         <div class="row">
             <div class="col-md-4">
-                <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
+                <% if(campground.images.length) { %> 
+                    <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
+                <% } else { %>
+                    <img class="img-fluid" alt="" 
+                    src="https://res.cloudinary.com/dvyelp/image/upload/v1629653410/YelpCamp/fdavq8o6e5awsaxloasi.jpg">
+                <% } %>  
             </div>
             <div class="col-md-8">
                <div class="card-body">
