--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,6 +3,7 @@
 
 <div class="row">
     <div class="col-6">
+        <div id='map' style='width: 400px; height: 300px;'></div>
         <div id="campgroundCarousel" class="carousel slide" data-bs-interval="false">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => { %>
@@ -22,6 +23,7 @@
                 </button>
             <% } %> 
         </div>
+
         <div class="card mb-3">
             <div class="card-body">
                 <h5 class="card-title"><%= campground.title %></h5>
@@ -90,3 +92,9 @@
         <% } %>
     </div>
 </div>
+
+<script>
+    const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+    const campground = <%- JSON.stringify(campground) %>;
+</script>
+<script src="/javascripts/showPageMap.js"></script>
