--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,7 @@
-<% layout('/layouts/boilerplate')%> 
+<% layout('/layouts/boilerplate')%>
+<div id="map" style="width: 100%; height: 500px">
+
+</div>
 <h1>All campgrounds</h1>
 
 <% for( let campground of campgrounds ) { %>
@@ -15,6 +18,7 @@
             <div class="col-md-8">
                <div class="card-body">
                    <h5 class="card-title"> <%= campground.title %> </h5>
+
                    <p class="card-text"><%= campground.description %></p>
                    <p class="card-text">
                        <small class="text-muted"> <%= campground.location %> </small>
@@ -25,3 +29,9 @@
         </div>
     </div>
 <% } %>
+
+<script>
+    const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+    const campgrounds = {features: <%- JSON.stringify(campgrounds) %>};
+</script>
+<script src="/javascripts/clusterMap.js"></script>
