--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,7 +5,7 @@
 <h1>All campgrounds</h1>
 
 <% for( let campground of campgrounds ) { %>
-    <div class="card" mb-3>
+    <div class="card mb-3">
         <div class="row">
             <div class="col-md-4">
                 <% if(campground.images.length) { %> 
