--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,7 +1,7 @@
 <% layout('/layouts/boilerplate')%> 
 <div class="row">
     <h1 class="text-center">New Campground</h1>
-    <div class="col-6 offset-3">
+    <div class="col-md-6 offset-md-3">
         <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
@@ -38,7 +38,8 @@
             </div>
 
             <div class="mb-3 custom-file">
-                <input class="form-control custom-file-input" type="file" name="image" multiple>
+                <label for="files" class="custom-file-lab">Campground Images</label>
+                <input class="form-control custom-file-input btn" id="files" type="file" name="image" multiple>
             </div>
 
             <div class="mb-3">
