--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,34 +1,34 @@
 <% layout('/layouts/boilerplate')%>
-<div id="map" style="width: 100%; height: 500px">
+<div id="cluster-map"></div>
+<div class="container">
+    <h1>All campgrounds</h1>
+    <% for( let campground of campgrounds ) { %>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <% if(campground.images.length) { %> 
+                        <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
+                    <% } else { %>
+                        <img class="img-fluid" alt="" 
+                        src="https://res.cloudinary.com/dvyelp/image/upload/v1629653410/YelpCamp/fdavq8o6e5awsaxloasi.jpg">
+                    <% } %>  
+                </div>
+                <div class="col-md-8">
+                   <div class="card-body">
+                       <h5 class="card-title"> <%= campground.title %> </h5>
 
-</div>
-<h1>All campgrounds</h1>
-
-<% for( let campground of campgrounds ) { %>
-    <div class="card mb-3">
-        <div class="row">
-            <div class="col-md-4">
-                <% if(campground.images.length) { %> 
-                    <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
-                <% } else { %>
-                    <img class="img-fluid" alt="" 
-                    src="https://res.cloudinary.com/dvyelp/image/upload/v1629653410/YelpCamp/fdavq8o6e5awsaxloasi.jpg">
-                <% } %>  
-            </div>
-            <div class="col-md-8">
-               <div class="card-body">
-                   <h5 class="card-title"> <%= campground.title %> </h5>
-
-                   <p class="card-text"><%= campground.description %></p>
-                   <p class="card-text">
-                       <small class="text-muted"> <%= campground.location %> </small>
-                   </p>
-                   <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">View <%=campground.title %></a>
-               </div> 
+                       <p class="card-text"><%= campground.description %></p>
+                       <p class="card-text">
+                           <small class="text-muted"> <%= campground.location %> </small>
+                       </p>
+                       <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">View <%=campground.title %></a>
+                   </div> 
+                </div>
             </div>
         </div>
-    </div>
-<% } %>
+    <% } %>
+</div>
+
 
 <script>
     const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
