--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,6 @@
 
 <div class="row">
     <div class="col-6">
-        <div id='map' style='width: 400px; height: 300px;'></div>
         <div id="campgroundCarousel" class="carousel slide" data-bs-interval="false">
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => { %>
@@ -45,6 +44,7 @@
         </div>
     </div>
     <div class="col-6">
+        <div id='map' class='mb-3'></div>
         <% if(currentUser) {%> 
             <h2>Leave a Review</h2>
             <form action="/campgrounds/<%= campground._id %>/reviews" class="mb-3 validated-form" novalidate method="POST">
