--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -94,7 +94,7 @@
 </div>
 
 <script>
-    const mapToken = '<%- process.env.MAPTILER_API_KEY %>';
+    const maptilerApiKey = '<%- process.env.MAPTILER_API_KEY %>';
     const campground = <%- JSON.stringify(campground) %>
 </script>
 <script src="/javascripts/showPageMap.js"></script>
