--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -31,7 +31,7 @@
 
 
 <script>
-    const mapToken = '<%- process.env.MAPTILER_API_KEY %>';
+    const maptilerApiKey = '<%- process.env.MAPTILER_API_KEY %>';
     const campgrounds = {features: <%- JSON.stringify(campgrounds) %>};
 </script>
 <script src="/javascripts/clusterMap.js"></script>
