--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,5 @@
 <% layout('/layouts/boilerplate')%>
-<div id="cluster-map"></div>
+<div id="map"></div>
 <div class="container">
     <h1>All campgrounds</h1>
     <% for( let campground of campgrounds ) { %>
